tests/rosetta/out/Zig/24-game-solve.error
zig build: exit status 1
/tmp/24-game-solve.zig:209:41: error: no member named 'items' in '[]hash_map.HashMap([]const u8,i32,hash_map.StringContext,80)'
